--- a/src/main/resources/site/layouts/divider/divider.html
+++ b/src/main/resources/site/layouts/divider/divider.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-bottom: 3rem">
+<div class="container">
     <div class="row layout-2-col">
         <div data-portal-region="left" class="col-lg-6">
             <div data-th-each="component : ${leftRegion.components}" data-th-remove="tag">
