--- a/src/main/resources/assets/css/quiz.css
+++ b/src/main/resources/assets/css/quiz.css
@@ -19,6 +19,7 @@
     transition: background-color .1s ease-in-out;
     background-color: #e2e6e9;
     border-radius: 0;
+    border: none;
     width: calc(50% - 1rem - 6px);
     padding: 1.5em 3em;
     margin: 1rem 1rem 1rem 3px;
@@ -133,7 +134,7 @@
     padding-bottom: 1rem;
 }
 .quiz__image {
-    max-width: 680px;
+    max-width: 680px !important;
     width: 100%;
     margin: 1rem auto;
     text-align: left !important;
@@ -205,4 +206,68 @@
     .quiz__wrapper, .quiz__wrapper-inner {
         padding: 2rem 0;
     }
+}
+.tab-transition-enter{
+    transform:translate(100%, 0)
+}
+.tab-transition-leave, .tab-transition-leave-active {
+    position:absolute;
+    top:0
+}
+.tab-transition-leave-to {
+    position:absolute;
+    transform:translate(-100%, 0)
+}
+.tab-reverse-transition-enter {
+    transform:translate(-100%, 0)
+}
+.tab-reverse-transition-leave, .tab-reverse-transition-leave-to {
+    top:0;
+    position:absolute;
+    transform:translate(100%, 0)
+}
+
+.theme--light .v-image {
+    color: rgba(0,0,0,.87);
+}
+.theme--dark .v-image {
+    color:#fff;
+}
+.v-image {
+    z-index: 0;
+}
+.v-image__image, .v-image__placeholder {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.v-image__image {
+    background-repeat: no-repeat;
+}
+.v-image__image--preload {
+    filter:blur(2px);
+}
+.v-image__image--contain {
+    background-size: contain;
+}
+.v-image__image--cover {
+    background-size:cover
+}
+.v-responsive {
+    position:relative;
+    overflow:hidden;
+    flex:1 0 auto;
+    max-width:100%;
+    display:flex;
+}
+.v-responsive__content {
+    flex:1 0 0;
+    max-width: 100%;
+}
+.v-responsive__sizer {
+    transition:padding-bottom .2s cubic-bezier(0.25, 0.8, 0.5, 1);
+    flex:1 0 0;
 }
