--- a/src/main/resources/assets/css/story.css
+++ b/src/main/resources/assets/css/story.css
@@ -104,6 +104,7 @@
     background-color: rgba(0, 0, 0, 0.4);
 }
 .stories__wrapper .story__header {
+    background: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(25,27,33,0.8) 100%);
     position: absolute;
     z-index: 1;
     width: 100%;
@@ -197,8 +198,8 @@
     display: flex;
     z-index: 1;
     width: 100%;
-    height: calc(100% - 50px);
-    margin-top: 50px;
+    height: calc(100% - 100px);
+    margin: 50px 0;
 }
 .stories__wrapper .story__controller-left, .stories__wrapper .story__controller-right {
     width: 50%;
@@ -211,6 +212,15 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-color: #191b21;
+}
+.stories__wrapper .story__image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 .stories__wrapper .story__mobile-image {
     cursor: pointer;
@@ -329,6 +339,21 @@
     background-size: contain;
     background-position: center;
     background-color: #191b21;
+}
+.stories__wrapper .story__video-player-sound {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 2rem;
+    height: 2rem;
+    margin: 1rem;
+    background-color: rgba(25, 27, 33, 0.5);
+    border-radius: 100%;
+    cursor: pointer;
+}
+.stories__wrapper .story__video-player-sound img {
+    width: 18px;
+    margin: 0.5rem;
 }
 .stories__wrapper .stories__title-break {
     width: 90px;
