--- a/src/main/resources/assets/css/contact-form.css
+++ b/src/main/resources/assets/css/contact-form.css
@@ -50,6 +50,7 @@
     outline: none;
     border: 2px solid #191B21;
     transition: all .35s;
+    position: relative;
 }
 .contact-form__wrapper form button[type=submit] span {
     color: #FFFFFF;
